try to fix scrolling on homepage on mobile

--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -38,7 +38,7 @@
 }
 
 .intro {
-    width: $full-width;
+    width: auto;
     padding-bottom: 25px;
     margin-top: 70px;
     margin-left: 40px;
